simple page added

--- a/index.html
+++ b/index.html
@@ -318,10 +318,40 @@
                         <h4>Price: $1300-$1500</h4>
                         <button class="btn-primary">Book Now</button>
                     </div>
+
                     
+                    
+                </div>
+                <button class="btn-primary deal-btn">See All Packages</button>
+            </div>
+        </section>
+
+        <!--======Demo place=======-->
+        <section class="demo-section">
+            <div class="container">
+                <div class="demo-container">
+                    <div class="col-50">
+                        <h3 class="section-title">A Simple Perfect Place To Get Lost</h3>
+                        <p class="section-p">Embark on endless adventures, discover new horizons, and create lasting memories with our
+                            <br> immersive "Explore Your Travel" experiences.</p>
+
+                        <ul>
+                            <li><p>"Explore iconic landmarks, savor local cuisines, and create unforgettable memories
+                                on our popular guided tours worldwide."</p></li>
+                                <li><p>
+                                    "Immerse yourself in the allure of world-famous landmarks, delight in the flavors of local cuisines, and weave lasting memories through our sought-after guided tours spanning the globe."</p></li>
+
+                                <button class="btn-primary">See More</button>
+                        </ul>
+                    </div>
+                    <div class="col-50">
+                        <iframe  height="315" src="https://www.youtube.com/embed/DAlzlebbdPo?si=gY7Gz_c-cNe0foXc&amp;controls=0&amp;start=300" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
                 </div>
             </div>
         </section>
+
+        <!--=======News letter=====-->
 
     </main>
 
