lateset code added

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
 
                 <hr>
 
-                <p>2017,All Rights Reversed</p>
+                <p class="copy-right">2017,All Rights Reversed</p>
 
         </div>
     </footer>
