--- a/index.html
+++ b/index.html
@@ -395,6 +395,10 @@
                     <div class="col-50">
                         <div class="news-img">
                             <img src="./Images/Rectangle-8-(1).png" alt="">
+                            <div class="news-offer">
+                                <p>Travel.com</p>
+                                <h3>Save up to 70%</h3>
+                            </div>
                         </div>
                     </div>
                 </div>
